# Todo-app-using-speckit-and-claude-

./: .gitignore  IMPLEMENTATION_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  STARTUP_GUIDE.md  handler.py  package-lock.json  package.json  start.bat  start.sh  test_manual_workflow.py  test_persistence_manual.py  vercel.json
ai-chatbot/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_STEPS.md  Dockerfile  EXAMPLES.md  EXTENDING.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PROJECT_LAYOUT.md  QUICKSTART.md  README.md  package.json  railway.toml  tsconfig.json
ai-chatbot/examples/: demo.ts
ai-chatbot/src/: index.ts
backend/: .env  __init__.py  index.py  pyproject.toml  railway.json  requirements.txt  wsgi.py
backend/api/: __init__.py  main.py
backend/api/middleware/: __init__.py
backend/api/routes/: tasks.py
backend/api/schemas/: task_schema.py
backend/core/: __init__.py  config.py
backend/core/models/: __init__.py  task.py
backend/core/services/: __init__.py  task_manager.py  task_persistence.py
frontend/: .env.example  .env.local  package-lock.json  vite.config.js
frontend-react-backup/: index.html  package.json
frontend/src/: App.jsx
nextjs-app/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
nextjs-app/app/: globals.css  layout.tsx  page.tsx
nextjs-app/components/: TaskFilter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TaskStats.tsx
phase-4/: DEPLOYMENT.md  README.md  nginx.conf
src/: __init__.py
tests/: __init__.py
(+61 files in other folders)
